move SvListView from Table to ptr_map, related fdo#45679